Changelog for Shake

    #43, improve the error messages on lint failures
    #45, avoid use of nub
    #45, avoid use of intersect which is O(n^2)
    #26, add newThrottle to create throttling resources
    #26, add unsafeExtraThread to run more than shakeThreads
    #32, add a check that withResources does not call need
    #614, support unicode filenames
    Require unordered-containers-0.2.1 or above
    Reduce stack usage when lint checking
    #24, create the output directories for the multiple file rule
    Improvements to match Ninja behaviour
0.10.6
    Include command/cmd in the default module
    #16, change the scoping in subninja
    #15, fix up the Ninja default targets
    Fix up --version output
0.10.5
    Improve progress prediction for the first build
    Fix removeFiles when there is a directory argument and a pattern
    Delete shakeDeterministic, shakeThreads=1 has the same effect
0.10.4
    Fix writeFileChanged for line endings on Windows
    Support arguments to --progress
    Set the number of capabilities based on -j flags
    Add shakeTimings, to time the separate stages
    Add AssumeSkip, mostly for benchmarking
    Normalise file arguments before calling want
    Expose ShakeException
    Add isFailure to ShakeProgress, and display in progressDisplay
    Add withResources
    Add -<.> alias for replaceExtension
    Add selectors on Stdout/Stdin/Exit
    Add CmdResult instance for ExitCode
0.10.3
    Upgrade to Flot-0.8
    Small documentation markup fixes
0.10.2
    Require process-1.1 or above
    Improve progress guesses (use exponential decay of work rate)
    Improve profiling report error messages
    Add a Command module, with alternatives to system' etc.
    #593, don't assume doesDirectoryExist = not . doesFileExist
    #594, swap how traced messages are printed out
    Add Chatty verbosity, for what was Loud
    Make repeated --verbose keep increasing the verbosity
    If shakeThreads==1 then always use a deterministic pool